<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.solution.migraine.migrainenova.QuestionaireMIDAS">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/my_toolbar"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/arrow_back"
            android:onClick="backPressed"
            android:layout_gravity="left"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_arrow"
            />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="Galvos skausmo sunkumas"
            android:layout_gravity="left"
            android:textColor="#FFF"
            android:gravity="left"
            android:textSize="20dp"

            android:id="@+id/toolbar_title" />


    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_below="@+id/expandable_layout_midas_results"
        android:layout_width="match_parent"
        android:layout_above="@+id/button_submit"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:padding="10dp"
                    android:textColor="#000"
                    android:text="@string/midas_question_1"
                    />



                <EditText
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:hint="Jūsų atsakymas"
                    android:inputType="number"
                    android:maxLength="2"
                    android:id="@+id/first_question_ans" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:padding="10dp"
                    android:textColor="#000"
                    android:text="@string/midas_question_2"
                    />



                <EditText
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:inputType="number"
                    android:maxLength="2"
                    android:hint="Jūsų atsakymas"
                    android:id="@+id/second_question_ans" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:padding="10dp"
                    android:textColor="#000"
                    android:text="@string/midas_question_3"
                    />



                <EditText
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:maxLength="2"
                    android:inputType="number"
                    android:layout_marginLeft="10dp"
                    android:hint="Jūsų atsakymas"
                    android:id="@+id/third_question_ans" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:padding="10dp"
                    android:textColor="#000"
                    android:text="@string/midas_question_4"
                    />



                <EditText
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:inputType="number"
                    android:layout_marginLeft="10dp"
                    android:maxLength="2"
                    android:hint="Jūsų atsakymas"
                    android:id="@+id/fourth_question_ans" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:padding="10dp"
                    android:textColor="#000"
                    android:text="@string/midas_question_5"
                    />



                <EditText
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:inputType="number"
                    android:maxLength="2"
                    android:hint="Jūsų atsakymas"
                    android:id="@+id/fifth_question_ans" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:padding="10dp"
                    android:textColor="#000"
                    android:text="@string/midas_question_6"
                    />



                <EditText
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:hint="Jūsų atsakymas"
                    android:inputType="number"
                    android:maxLength="2"
                    android:id="@+id/sixth_question_ans" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:padding="10dp"
                android:textColor="#000"
                android:text="Koks buvo vidutinis galvos skausmo stiprumas pagal skalę nuo 0 iki 10?"/>

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:dsb_min="1"
                app:dsb_max="10"
                app:dsb_trackColor="#fff"
                app:dsb_progressColor="@color/colorAccent"
                app:dsb_indicatorColor="@color/colorAccent"
                android:id="@+id/max_duration_slider"
                app:dsb_thumbSize="20dp"
                app:dsb_trackHeight="10dp"
                app:dsb_scrubberHeight="10dp"
                app:dsb_value="5"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />


        </LinearLayout>


        </LinearLayout>



    </ScrollView>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:text="Gauti rezultatus"
        android:onClick="getResults"
        android:id="@+id/button_submit"
        android:textAllCaps="false"
        android:textColor="#fff" />



    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/expandable_layout_midas_results"
        android:layout_below="@+id/my_toolbar"
        android:background="@color/colorPrimary"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="#fff"
            android:id="@+id/results"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textSize="18dp"/>

    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


</RelativeLayout>
